Back to checkbox-buttons

--- a/html/header.html
+++ b/html/header.html
@@ -43,7 +43,7 @@
         outline: none;
     }
 
-    .button {
+    .checkbox-button {
         padding: 6px 10px;
         text-align: center;
         border-radius: 5px;
@@ -55,7 +55,7 @@
         flex: none;
     }
 
-    .button.checked {
+    .checkbox-button.checked {
         background-color: #007bff;
         color: white;
     }
