--- a/html/meal_picker.html
+++ b/html/meal_picker.html
@@ -1,17 +1,17 @@
 <main>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Rice"}'>Rice</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Potatoes"}'>Potatoes</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Pasta"}'>Pasta</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Bread"}'>Bread</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Cheese"}'>Cheese</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Chicken"}'>Chicken</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Beef"}'>Beef</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Fish"}'>Fish</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Vegetables"}'>Vegetables</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Fruits"}'>Fruits</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Salad"}'>Salad</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Soup"}'>Soup</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Eggs"}'>Eggs</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Milk"}'>Milk</button>
-    <button class="button" hx-trigger="click" hx-get="/add_item" hx-target="#results" hx-vals='{"item": "Yogurt"}'>Yogurt</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Rice</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Potatoes</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Pasta</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Bread</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Cheese</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Chicken</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Beef</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Fish</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Vegetables</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Fruits</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Salad</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Soup</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Eggs</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Milk</button>
+    <button class="checkbox-button" onclick="toggleCheckbox(this)">Yogurt</button>
 </main>
