--- a/html/bottom_bar.html
+++ b/html/bottom_bar.html
@@ -1,3 +1,3 @@
-<div class="bottom-bar" onclick="alert('Proceeding to the next step')">
+<div class="bottom-bar" hx-trigger="click" hx-include="#checkbox-form" hx-target="#replace_content, #bottom-bar" hx-post="/values">
     <span>Set Values <i class="arrow"></i></span>
 </div>
